--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="css/base.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvPYSYqQNhLgP_G6WwXzWlB9muBjauuw&libraries=visualization,places"></script>
-    <script type="text/jsx;harmony=true" src="scripts/main.js"></script>
+    <script defer type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body>
     <div id="content"></div>
   </body>
 </html>
-
