--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <title>Charcoal Maps</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="css/base.css" />
+    <link rel="icon" type="image/png" href="images/charcoal-maps-icon-357.png">
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="images/charcoal-maps-icon-180.png" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvPYSYqQNhLgP_G6WwXzWlB9muBjauuw&libraries=visualization,places"></script>
