Require react and react-dom from npm

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="icon" type="image/png" href="images/charcoal-maps-icon-357.png">
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="images/charcoal-maps-icon-180.png" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvPYSYqQNhLgP_G6WwXzWlB9muBjauuw&libraries=visualization,places"></script>
+    <script defer type="text/javascript" src="scripts/vendors.js"></script>
     <script defer type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body>
