Add slideout for control panel

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,21 @@
   <head>
     <title>Charcoal Maps</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+
     <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/control-panel.css" />
+    <link rel="stylesheet" href="css/map-panel.css" />
+    <link rel="stylesheet" href="css/slideout/slideout-js.css" />
+    <link rel="stylesheet" href="css/slideout/slideout.css" />
+
     <link rel="icon" type="image/png" href="images/charcoal-maps-icon-357.png">
     <link rel="apple-touch-icon-precomposed" sizes="180x180" href="images/charcoal-maps-icon-180.png" />
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvPYSYqQNhLgP_G6WwXzWlB9muBjauuw&libraries=visualization,places"></script>
+
     <script defer type="text/javascript" src="scripts/vendors.js"></script>
     <script defer type="text/javascript" src="scripts/main.js"></script>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvPYSYqQNhLgP_G6WwXzWlB9muBjauuw&libraries=visualization,places"></script>
   </head>
   <body>
     <div id="content"></div>
